[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/Options/Options.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Background in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0, 0, 0 ), Color( 0.0627451, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Background out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0, 0, 1 ), Color( 0.0627451, 0, 0, 0 ) ]
}

[node name="Options" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -3.05176e-05
color = Color( 0.0627451, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 720.0
margin_bottom = 399.0
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 2.0
margin_right = 248.0
margin_bottom = 22.0
text = "Master Volume:"
valign = 1

[node name="MasterVolume" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_right = 720.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 248.0
margin_bottom = 51.0
text = "Music Volume:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_top = 29.0
margin_right = 720.0
margin_bottom = 54.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 248.0
margin_bottom = 80.0
text = "SFX Volume:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolume" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_top = 58.0
margin_right = 720.0
margin_bottom = 83.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 248.0
margin_bottom = 112.0
text = "Fullscreen:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_top = 87.0
margin_right = 720.0
margin_bottom = 117.0
flat = true

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 248.0
margin_bottom = 146.0
text = "Grayscale:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grayscale" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_top = 121.0
margin_right = 720.0
margin_bottom = 151.0
flat = true

[node name="Label8" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 157.0
margin_right = 248.0
margin_bottom = 177.0
text = "Grayscale Amount:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrayscaleAmount" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_top = 155.0
margin_right = 720.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 248.0
margin_bottom = 209.0
text = "Chromatic Aberration:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChromaticAberration" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_top = 184.0
margin_right = 720.0
margin_bottom = 214.0
flat = true

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 248.0
margin_bottom = 240.0
text = "Chromatic Aberration Amount:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChrAbeAmount" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_left = 252.0
margin_top = 218.0
margin_right = 720.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 247.0
margin_right = 248.0
margin_bottom = 365.0
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 252.0
margin_top = 247.0
margin_right = 720.0
margin_bottom = 365.0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 248.0
margin_bottom = 399.0
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Background in" = SubResource( 1 )
"anims/Background in 2" = SubResource( 1 )
"anims/Background out" = SubResource( 2 )
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterVolume" to="." method="masterVolume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolume" to="." method="musicVolume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXVolume" to="." method="sfxVolume_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Grayscale" to="." method="backgroundOut"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Grayscale" to="." method="backgroundIn"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Grayscale" to="." method="grayscale_changed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GrayscaleAmount" to="." method="backgroundOut"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GrayscaleAmount" to="." method="backgroundIn"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GrayscaleAmount" to="." method="_on_GrayscaleAmount_value_changed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ChromaticAberration" to="." method="backgroundOut"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/ChromaticAberration" to="." method="backgroundIn"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ChromaticAberration" to="." method="chromaticAberration_changed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ChrAbeAmount" to="." method="backgroundOut"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/ChrAbeAmount" to="." method="backgroundIn"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ChrAbeAmount" to="." method="chromaticAberrationAmount_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="hide"]
